Fix build errors: Node 20+ requirement and TypeScript config
- Add engines field to package.json (Node >=20.0.0)
- Add .nvmrc and .node-version for Node 20
- Relax unused locals/parameters checks in tsconfig
- Fixes Railway build failure with Supabase Node 20 requirement

--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,10 @@
   "author": "",
   "license": "ISC",
   "type": "commonjs",
+  "engines": {
+    "node": ">=20.0.0",
+    "npm": ">=9.0.0"
+  },
   "dependencies": {
     "@supabase/supabase-js": "^2.90.1",
     "cors": "^2.8.5",
