--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "express": "^5.2.1",
     "express-rate-limit": "^8.2.1",
     "helmet": "^8.1.0",
+    "openai": "^6.16.0",
     "winston": "^3.19.0"
   },
   "devDependencies": {
