Phase 2.1: Tavily Search Integration - Complete
- Integrated Tavily Search API with @tavily/core SDK
- Created search service with topic filtering
- Combined search results with AI responses
- Added source attribution to AI responses
- Implemented search result caching (in-memory, 1 hour TTL)
- Created search routes (POST /api/search, cache management)
- Updated AI service to support search integration
- Updated AI routes to accept search parameters
- Updated frontend API client with search types and functions
- All Phase 2.1 requirements completed

--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.90.1",
+    "@tavily/core": "^0.6.4",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
