--- a/backend/package.json
+++ b/backend/package.json
@@ -36,6 +36,7 @@
     "express": "^5.2.1",
     "express-rate-limit": "^8.2.1",
     "helmet": "^8.1.0",
+    "multer": "^1.4.5-lts.1",
     "openai": "^6.16.0",
     "winston": "^3.19.0"
   },
@@ -44,6 +45,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/jest": "^30.0.0",
+    "@types/multer": "^1.4.12",
     "@types/node": "^25.0.6",
     "@typescript-eslint/eslint-plugin": "^8.52.0",
     "@typescript-eslint/parser": "^8.52.0",
