--- a/backend/package.json
+++ b/backend/package.json
@@ -36,8 +36,10 @@
     "express": "^5.2.1",
     "express-rate-limit": "^8.2.1",
     "helmet": "^8.1.0",
+    "mammoth": "^1.11.0",
     "multer": "^1.4.5-lts.1",
     "openai": "^6.16.0",
+    "pdf-parse": "^2.4.5",
     "winston": "^3.19.0"
   },
   "devDependencies": {
@@ -47,6 +49,7 @@
     "@types/jest": "^30.0.0",
     "@types/multer": "^1.4.12",
     "@types/node": "^25.0.6",
+    "@types/pdf-parse": "^1.1.5",
     "@typescript-eslint/eslint-plugin": "^8.52.0",
     "@typescript-eslint/parser": "^8.52.0",
     "eslint": "^9.39.2",
