--- a/backend/package.json
+++ b/backend/package.json
@@ -40,6 +40,7 @@
     "multer": "^1.4.5-lts.1",
     "openai": "^6.16.0",
     "pdf-parse": "^2.4.5",
+    "tesseract.js": "^7.0.0",
     "winston": "^3.19.0"
   },
   "devDependencies": {
