Phase 2.5: Pinecone Integration Complete - Add Pinecone vector database integration for semantic search - Implement vector upsert with batch processing - Add semantic search functionality with user/topic filtering - Create Pinecone service and configuration - Update document processing to store vectors in Pinecone - Add semantic search API endpoints - Integrate vector deletion on document delete/clear - Update chunk service to link Pinecone vector IDs

--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "npm": ">=9.0.0"
   },
   "dependencies": {
+    "@pinecone-database/pinecone": "^6.1.3",
     "@supabase/supabase-js": "^2.90.1",
     "@tavily/core": "^0.6.4",
     "cors": "^2.8.5",
