--- a/frontend/wrangler.jsonc
+++ b/frontend/wrangler.jsonc
@@ -2,6 +2,7 @@
   "$schema": "node_modules/wrangler/config-schema.json",
   "main": ".open-next/worker.js",
   "name": "queryai-frontend",
+  "pages_build_output_dir": ".open-next/assets",
   "compatibility_date": "2024-12-30",
   "compatibility_flags": [
     // Enable Node.js API
