--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "build:cloudflare": "next build && npx @opennextjs/cloudflare build",
+    "build:cloudflare": "next build && npx @cloudflare/next-on-pages@1.13.16",
     "start": "next start",
     "lint": "eslint"
   },
@@ -30,7 +30,7 @@
     "zustand": "^5.0.9"
   },
   "devDependencies": {
-    "@opennextjs/cloudflare": "^1.15.0",
+    "@cloudflare/next-on-pages": "1.13.16",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
