--- a/frontend/wrangler.jsonc
+++ b/frontend/wrangler.jsonc
@@ -1,14 +1,11 @@
 {
   "$schema": "node_modules/wrangler/config-schema.json",
   "name": "queryai-frontend",
-  "pages_build_output_dir": ".open-next",
+  "pages_build_output_dir": ".vercel/output/static",
   "compatibility_date": "2024-12-30",
   "compatibility_flags": [
     // Enable Node.js API
     // see https://developers.cloudflare.com/workers/configuration/compatibility-flags/#nodejs-compatibility-flag
-    "nodejs_compat",
-    // Allow to fetch URLs in your app
-    // see https://developers.cloudflare.com/workers/configuration/compatibility-flags/#global-fetch-strictly-public
-    "global_fetch_strictly_public"
+    "nodejs_compat"
   ]
 }
