Fix Next.js 16 compatibility with @cloudflare/next-on-pages
- Add package.json overrides to bypass peer dependency conflict
- Document --legacy-peer-deps solution for Cloudflare build
- Note deprecation of @cloudflare/next-on-pages
- Provide migration path to OpenNext adapter

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,11 @@
     "start": "next start",
     "lint": "eslint"
   },
+  "overrides": {
+    "@cloudflare/next-on-pages": {
+      "next": "$next"
+    }
+  },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "axios": "^1.13.2",
