Fix Dockerfile: Explicitly copy package-lock.json and fix .dockerignore
- Explicitly copy package.json and package-lock.json in Dockerfile
- Update .dockerignore to allow necessary files for Docker build
- Fixes npm ci error: package-lock.json not found

--- a/backend/.dockerignore
+++ b/backend/.dockerignore
@@ -1,2 +1,15 @@
-# Ignore everything - we use Nixpacks, not Dockerfile
-*
+# Ignore most files, but allow package files and source
+node_modules/
+dist/
+.git/
+.env
+.env.local
+*.log
+coverage/
+.nyc_output/
+*.md
+!README.md
+.vscode/
+.idea/
+*.swp
+*.swo
