Fix Dockerfile: Skip postinstall during npm ci and copy source before build
- Use --ignore-scripts flag during npm ci to skip postinstall
- Copy tsconfig.json and source files before running build
- Prevents build failure from running before source files are available

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,11 +9,13 @@ WORKDIR /app
 # Copy package files (explicitly copy both)
 COPY package.json package-lock.json ./
 
-# Install dependencies
-RUN npm ci
+# Install dependencies (skip postinstall to avoid build before source is copied)
+RUN npm ci --ignore-scripts
 
-# Copy source
-COPY . .
+# Copy source and config files needed for build
+COPY tsconfig.json ./
+COPY src ./src
+COPY public ./public
 
 # Build
 RUN npm run build
