--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "@pinecone-database/pinecone": "^6.1.3",
     "@supabase/supabase-js": "^2.90.1",
     "@tavily/core": "^0.6.4",
+    "@types/pdfkit": "^0.17.4",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
@@ -41,6 +42,7 @@
     "multer": "^1.4.5-lts.1",
     "openai": "^6.16.0",
     "pdf-parse": "^2.4.5",
+    "pdfkit": "^0.17.2",
     "tesseract.js": "^7.0.0",
     "winston": "^3.19.0"
   },
